Bug 76973 - Cropped context menu in multiple workspaces
Summary: Cropped context menu in multiple workspaces
Status: VERIFIED FIXED
Alias: None
Product: Wayland
Classification: Unclassified
Component: weston (show other bugs)
Version: unspecified
Hardware: Other All
: medium normal
Assignee: Wayland bug list
QA Contact:
URL:
Whiteboard:
Keywords:
Depends on:
Blocks:
 
Reported: 2014-04-03 00:13 UTC by Anu Reddy
Modified: 2014-05-08 17:37 UTC (History)
0 users

See Also:
i915 platform:
i915 features:


Attachments
context-menu (109.15 KB, image/png)
2014-04-03 16:42 UTC, Anu Reddy
Details

Description Anu Reddy 2014-04-03 00:13:31 UTC
Steps to Reproduce:
===================
1. Activate workspaces by uncommenting num-workspaces=6 in weston.ini
2. Launch weston
3. Launch a surface : weston-flower
4. Right click on the surface to activate context menu
5. Click on “Move to workspace below”. Observe cropped context menu still rendering.

Software stack:
===============
wayland (master) heads/master-0-g1bf13ae
drm (master) heads/master-0-g1cb5fc7
mesa (master) heads/master-0-g64278b3
libva (master) heads/master-0-ge30e29a
intel-driver (master) heads/master-0-g75a7b09
cairo (master) heads/master-0-gbb17403
libinput (master) heads/master-0-ge49a988
weston (master) heads/master-0-gfe9671e
gstreamer (master) heads/master-0-gf85ce91
Comment 1 Anu Reddy 2014-04-03 16:42:21 UTC
Created attachment 96858 [details]
context-menu
Comment 2 Kristian Høgsberg 2014-04-10 17:16:44 UTC
Fixed in:

commit facc0ccf06850ec37972ed3002ae6783ef4cfbef
Author: Ander Conselvan de Oliveira <ander.conselvan.de.oliveira@intel.com>
Date:   Thu Apr 10 15:35:58 2014 +0300

    shell: Damage below child surfaces on move to different workspace
    
    When moving from a surface from visible workspace to an invisible one
    via a popup menu, the area below the menu wouldn't be repainted.
    
    https://bugs.freedesktop.org/show_bug.cgi?id=76973


Use of freedesktop.org services, including Bugzilla, is subject to our Code of Conduct. How we collect and use information is described in our Privacy Policy.